# diggy

./: LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_test.txt
.github/workflows/: unit_tests.yml
diggy/: __init__.py  diggy.py
diggy/tests/: test_diggy.py
